--- a/LibraryDemo.DesktopClient/LibraryDemo.DesktopClient.csproj
+++ b/LibraryDemo.DesktopClient/LibraryDemo.DesktopClient.csproj
@@ -7,15 +7,39 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="images\addBook.jpg" />
+    <None Remove="images\allBooks.png" />
+    <None Remove="images\Author.jpg" />
     <None Remove="images\bookIcon.png" />
     <None Remove="images\books.jpg" />
+    <None Remove="images\delete.jpg" />
+    <None Remove="images\Library.png" />
+    <None Remove="images\search.jpg" />
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="images\addBook.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="images\allBooks.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="images\Author.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="images\bookIcon.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="images\books.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="images\delete.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="images\Library.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="images\search.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
