--- a/LibraryDemo.DesktopClient/LibraryDemo.DesktopClient.csproj
+++ b/LibraryDemo.DesktopClient/LibraryDemo.DesktopClient.csproj
@@ -57,4 +57,26 @@
     <ProjectReference Include="..\LibraryDemo.Data\LibraryDemo.Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="WPFLocalizeExtension" Version="3.8.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Resources\loginFormContent\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Resources\loginFormContent\Resources.bg-BG.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Resources\loginFormContent\Resources.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+
 </Project>
