--- a/LibraryDemo.DesktopClient/LibraryDemo.DesktopClient.csproj
+++ b/LibraryDemo.DesktopClient/LibraryDemo.DesktopClient.csproj
@@ -62,20 +62,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Update="Resources\loginFormContent\Resources.Designer.cs">
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
-  </ItemGroup>
-
-  <ItemGroup>
     <EmbeddedResource Update="Resources\loginFormContent\Resources.bg-BG.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Resources\loginFormContent\Resources.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </EmbeddedResource>
   </ItemGroup>
 
